# compass

./: CMakeLists.txt  compass.appdata.xml.in
android/: AndroidManifest.xml.in  AndroidManifest.xml.in.ndk21  darwin-build-arm64-qt515.sh  darwin-build-armv7-qt515.sh  darwin-configure-arm64-qt512.sh  darwin-configure-armv7-qt512.sh  linux-build-arm64-qt515.sh  linux-build-armv7-qt515.sh  linux-build-x64-qt515.sh  linux-build-x86-qt515.sh  linux-configure-arm64-qt512.sh  linux-configure-armv7-qt512.sh
gui/: CMakeLists.txt  CompassSensor.qml  SensorPage.qml  SensorToolbar.qml  StyleLight.qml  Units.qml  genericcompass.cpp  main.cpp  main.qml  main.qrc  platformextras.cpp  signalhandler.h
gui/i18n/: README.md
